# CImpact

./: .gitignore  Dockerfile  Makefile  README.md  clustering_UC14.ipynb  config.yaml  file  notebook.ipynb  pip_audit_results.json  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  test.yaml
.checkmarx/scan_results/: CodeGuard-dev-library.md  CodeGuard-dev.md  CodeGuard-enhancement-confidence-interval.md  CodeGuard-feature-CICD-fix.md  CodeGuard-fix-ci.md  CodeGuard-fix-tensorflow-issue.md  CodeGuard-upgrade-packages-main.md
.github/: CODEOWNERS
.github/workflows/: checkmarx.yml  cicd.yml  dependency-audit.yml  publishing.yml
.ipynb_checkpoints/: config-checkpoint.yaml  notebook-checkpoint.ipynb
docs/: scenarios.MD
examples/: google_data.csv  how-to-use.md
scenarios/: us_multaq.json  us_multaq_3-1.json  us_multaq_3-2.json  us_multaq_3.json  us_toujeo_MONARCH.json
scenarios/Genmed/BRAZIL/: brazil_puran.json  brazil_zinpass.json
scenarios/Genmed/FRANCE/: france_toujeo.json  france_toujeo_front_runners.json
scenarios/Genmed/GERMANY/: germany_toujeo.json
scenarios/Genmed/ITALY/: it_toujeo.json
scenarios/Genmed/JAPAN/: japan_toujeo.json
scenarios/Genmed/SPAIN/: spain_toujeo.json
scenarios/Genmed/US/: us_multaq_2.json
scripts/: install.py
src/: main.py
src/causalimpact/: __init__.py  main.py  utils.py
src/cimpact/: main.py  utils.py
src/turing_causal_impact/: causal_inference.py  get_kpis_UC14.py  queries_sales.py  snowflake_api.py
tests/unit_tests/: test_causal_inference.py  test_main.py
workflows/: cron-workflow.yml
(+14 files in other folders)
