[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cimpact"
version = "0.1.1"
authors = [
  { name="sanofi", email="" },
]
description = ""
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]







[project.urls]
"Homepage" = "https://github.com/Sanofi-OneAI/oneai-com-turing-causal_inference"
"Bug Tracker" = ""